--- a/client/src/components/Layout/Footer/Footer.css
+++ b/client/src/components/Layout/Footer/Footer.css
@@ -1,27 +1,10 @@
 .footer-container {
-
-  background: white;
-
-  max-width: 100vw;
-  height: 75px;
-  padding: 25px;
-
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  position: sticky;
-  bottom: 0;
-  z-Index: 3;
-
-  box-shadow: 0px -1px 10px darkgray;
-
+  display: none;
 }
 
 .fas {
 
 font-size: 40px;
-color: #F39C12;
 
 }
 
@@ -64,5 +47,27 @@ color: #F39C12;
     -webkit-transform: translateY(0);
             transform: translateY(0);
     opacity: 1;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .footer-container {
+
+    background: white;
+  
+    max-width: 100vw;
+    height: 75px;
+    padding: 25px;
+  
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  
+    position: sticky;
+    bottom: 0;
+    z-Index: 3;
+  
+    box-shadow: 0px -1px 10px darkgray;
+  
   }
 }
