--- a/client/src/components/Layout/Layout.css
+++ b/client/src/components/Layout/Layout.css
@@ -1,8 +1,19 @@
 .layout-container {
   max-width: 100vw;
-  min-Height: 100vh;
   
   display: flex;
   flex-direction: column;
   
+  }
+
+  .body-container {
+    max-width: 100vw;
+    min-height: 90vh;
+
+    display: flex;
+    flex-direction: row;
+  }
+
+  @media only screen and (max-width: 800px) {
+
   }
