--- a/client/src/components/Layout/Footer/Footer.css
+++ b/client/src/components/Layout/Footer/Footer.css
@@ -2,12 +2,6 @@
   display: none;
 }
 
-.fas {
-
-font-size: 40px;
-
-}
-
 .slide-in-bottom-nav {
 	-webkit-animation: slide-in-bottom 0.5s ease-out both;
 	        animation: slide-in-bottom 0.5s ease-out both;
@@ -69,5 +63,11 @@ font-size: 40px;
   
     box-shadow: 0px -1px 10px darkgray;
   
+  }
+
+  .mobile-footer-icon {
+    font-size: 40px;
+    width: 50px;
+    color:  #BCE3C5;
   }
 }
