--- a/client/src/components/Layout/Sidebar/Sidebar.css
+++ b/client/src/components/Layout/Sidebar/Sidebar.css
@@ -1,12 +1,27 @@
 .sidebar-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 
   background-color: white;
-  width: 125px;
-  height: 100%;
+  width: 200px;
+  min-height: 90vh;
+
+  padding: 25px 10px;
+
+  box-shadow: 0px -1px 10px darkgray;
+}
+
+.sidebar-icon {
+  height: 75px;
+  width: 75px;
+
+  margin: 25px 0px;
+  
+  color: #BCE3C5;
+  font-size: 50px;
+  text-align: center;
 }
 
 @media only screen and (max-width: 800px) {
