--- a/client/src/components/Layout/Layout.css
+++ b/client/src/components/Layout/Layout.css
@@ -14,8 +14,17 @@
     flex-direction: row;
 
     flex-grow: 1;
+
+    position: relative;
+    top: 125px;
   }
 
   @media only screen and (max-width: 800px) {
+
+    .body-container {
+  
+      position: relative;
+      top: 80px;
+    }
 
   }
