--- a/client/src/components/Order/Orders.css
+++ b/client/src/components/Order/Orders.css
@@ -1,6 +1,16 @@
 .orders-container {
-  
+
   height: 100%;
   width: 100%;
+  padding: 25px 10px;
 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;
+  
 }
