resolved useEffect issue in maincontainer

--- a/client/src/components/Order/OrderCard.css
+++ b/client/src/components/Order/OrderCard.css
@@ -46,6 +46,7 @@
 
   background: rgba(188,227,197,0.4);
   border-top: solid #BCE3C5 1px;
+  border-bottom: solid #BCE3C5 1px;
 
   color: #989898;
   letter-spacing: 2px;
