--- a/client/src/components/Order/OrderCreate.css
+++ b/client/src/components/Order/OrderCreate.css
@@ -8,7 +8,10 @@
   width: 100vw;
   height: 100%;
   padding: 75px 10px;
-
+  
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;
 }
 
 .create-order-form-container {
@@ -107,16 +110,25 @@
   display: flex;
   flex-direction: column;
   letter-spacing: 2px;
-  margin-bottom: 5px;
+  margin-bottom: 25px;
 
 }
 
 .create-order-form-input {
 
+  width: 100%;
   border: none;
-  margin-top: 10px;
+  padding: 5px;
+  margin-top: 15px;
+
+  color: #989898;
+  letter-spacing: 4px;
 
   box-shadow: lightgrey 0px 5px 5px -6px;
+
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;
 
 }
 
@@ -143,6 +155,7 @@
 .create-mediction-form-container {
 
   width: 100%;
+  margin: 5px 0px;
 
   display: flex;
   justify-content: center;
@@ -156,9 +169,17 @@
   justify-content: flex-start;
   align-items: center;
   width: 100%;
+  border-bottom: none;
+}
+
+.radio-input {
+  margin-left: 25px;
+  outline: none; 
+  background-color: #BCE3C5;
 }
 
 .create-medication-form-title {
+
   font-family: helvetica;
   color: #BCE3C5;
   font-size: 50px;
@@ -169,5 +190,9 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  margin-bottom: 1em;
+  padding: 25px 0px;
 
+  border-top: 3px solid #BCE3C5;
+  border-bottom: 3px solid #BCE3C5;
 }
