--- a/client/src/screens/Login/LoginRouter.css
+++ b/client/src/screens/Login/LoginRouter.css
@@ -1,7 +1,9 @@
 .login-router-container-desktop {
   display: flex;
+  flex-direction: row;
   justify-content: flex-start;
   height: 100%;
+  width: 100%;
 }
 
 .login-actions-container {
