--- a/client/src/components/Order/Orders.css
+++ b/client/src/components/Order/Orders.css
@@ -14,3 +14,11 @@
   box-sizing: border-box;
   
 }
+
+@media only screen and (max-width: 800px) {
+
+  .orders-container {
+    width: 100%;
+  }
+
+}
