--- a/client/src/screens/Home/Home.css
+++ b/client/src/screens/Home/Home.css
@@ -39,3 +39,11 @@
 .unfilled-orders-total {
   font-weight: bolder;
 }
+
+@media only screen and (max-width: 800px) {
+
+  .home-container {
+    width: 100%;
+  }
+
+}
