--- a/client/src/components/Order/OrderCreate.css
+++ b/client/src/components/Order/OrderCreate.css
@@ -186,3 +186,12 @@
   background-color: #BCE3C5;
   color: #BCE3C5;
 }
+
+
+@media only screen and (max-width: 800px) {
+
+  .create-order-container {
+    width: 100%;
+  }
+
+}
