--- a/client/src/components/Search/Search.css
+++ b/client/src/components/Search/Search.css
@@ -14,7 +14,7 @@
 .search-input {
 
   background-color: transparent;
-  max-width: 30vw;
+  width: 100%;
   height: 10px;
   max-height: 70px;
   padding: 10px;
@@ -25,6 +25,8 @@
   border: none;
   color: #989898;
   font-family: helvetica;
+
+  flex-shrink: 1;
 
 }
 
