--- a/client/src/components/Order/Orders.css
+++ b/client/src/components/Order/Orders.css
@@ -2,7 +2,7 @@
 
   height: 100%;
   width: calc(100% - 225px);
-  padding: 25px 10px;
+  padding: 25px;
 
   display: flex;
   flex-direction: column;
