updated css for loginRouter and Layout component.s

--- a/client/src/components/Layout/Layout.css
+++ b/client/src/components/Layout/Layout.css
@@ -11,7 +11,9 @@
 .body-container {
     width: 100vw;
     max-width: 100vw;
-    min-height: 90vh;
+    min-height: calc(100vh - 125px);
+    /* min-height: 100vh; */
+    padding-top: 125px;
 
     display: flex;
     flex-direction: row;
@@ -19,23 +21,30 @@
 
     flex-grow: 1;
 
-    position: relative;
-    top: 125px;
+    /* position: relative;
+    top: 125px; */
+
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)), url('https://img.freepik.com/premium-vector/simple-line-icons-seamless-pattern-with-simple-linear-icons-pharmacy-store-hospital-needs_348818-1274.jpg?w=2000');
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
   @media only screen and (max-width: 800px) {
 
     .body-container {
       max-width: 100vw;
-      min-height: 90vh;
+      min-height: calc(100vh - 80px);
+      padding-top: 80px;
   
       display: flex;
       flex-direction: row;
   
       flex-grow: 1;
   
-      position: relative;
-      top: 80px;
+      /* position: relative;
+      top: 80px; */
     }
 
   }
