--- a/client/src/screens/Login/LoginRouter.css
+++ b/client/src/screens/Login/LoginRouter.css
@@ -3,25 +3,19 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  height: calc(100vh - 125px);
-  width: 100vw;
-  
-  background-image: linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)), url('https://img.freepik.com/premium-vector/simple-line-icons-seamless-pattern-with-simple-linear-icons-pharmacy-store-hospital-needs_348818-1274.jpg?w=2000');
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  /* background: red; */
+  width: 100%;
+  height: 100%;
+
 }
 
 .doctor-login-container, .patient-login-container {
-  width: 40%;
-  min-height: 40vh;
-  max-height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  width: 35%;
+  height: 60vh;
 
   background: rgba(188, 227, 197, 1);
   margin: 25px;
@@ -87,104 +81,50 @@
   color: white;
 }
 
-/* .login-actions-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  width: 50vw;
-  height: 100%;
-}
-
-.login-router-copy {
-  font-size: 48px;
-  color: white;
-} */
-
-/* .login-router-button {
-  width: 100px;
-  color: #BCE3C5;
-  background: transparent;
-  margin: 25px;
-  padding: 10px;
-
-  border: 3px solid #BCE3C5;
-  border-radius: 18px;
-
-} */
-
-/* .login-router-hero-image {
-  width: 100vw;
-  height: 100%;
-
-  object-fit: cover;
-  object-position: 5% 50%;
-
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
-
-  position: absolute;
-
-  z-index: -1;
-}
-
-.login-router-container-mobile {
-  display: none;
-} */
-
 
 @media only screen and (max-width: 800px) {
 
-  .login-router-container-mobile {
-    display: flex;
+  .login-router-container-desktop {
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    height: 100%;
-    width: 100vw;
-
+    justify-content: flex-start;
+  
   }
 
-  .login-router-copy-container-mobile {
-    margin: 35px;
-    margin-top: 0px;
-  }
-
-  .login-router-hero-image-mobile {
-    width: 100vw;
-    height: 100%;
+  .doctor-login-container, .patient-login-container {
+    width: 80%;
+    height: 40vh;
   
-    object-fit: cover;
-    object-position: 23% 90%;
-  
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
-  
-    position: absolute;
-    z-index: -1;
-
-    mask-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 40%);
-  }
-
-  .login-router-button {
-    color: white;
-    background: #BCE3C5;
-
-    font-size: 20px;
-    
-    width: 125px;
     margin: 25px;
     padding: 10px;
   
-    border: 3px solid white;
-    border-radius: 18px;
-  
+    font-size: clamp(0.75em, 18px, 1.5em);
   }
 
-  .login-router-container-desktop {
-    display: none;
+  .doctor-login-title, .patient-login-title {
+    font-weight: 900;
+    font-size: 36px;
+    margin: 5px 0px;
+  }
+
+  .doctor-login-subtitle, .patient-login-subtitle {
+    font-weight: 500;
+    font-size: 24px;
+    margin: 15px 0px 25px 0px;
+  }
+  
+  .login-router-button {
+    width: 80%;
+    max-width: 300px;
+    background: #BCE3C5;
+    /* margin: 25px; */
+    padding: 5px 10px;
+  
+    border: 5px solid white;
+    border-radius: 18px;
+   
+    font-size: 24px;
+    color: white;
+    font-weight: 700;
   }
 
 }
