--- a/client/src/components/Layout/Header/Header.css
+++ b/client/src/components/Layout/Header/Header.css
@@ -39,7 +39,7 @@
 .desktop-nav-link {
 
   font: helvetica;
-  font-size: 25px;
+  font-size: 30px;
   color: white;
   margin: 0px 25px;
 
@@ -152,8 +152,9 @@
     top: -1;
     z-index: 5;
 
-    background-color: #BCE3C5;
-    opacity: 0.7;
+    /* background-color: #BCE3C5; */
+    background-color: rgba(255, 255, 255, 0.9);
+    /* opacity: 0.7; */
 
     padding: 10px 25px 0px 25px;
   }
@@ -162,9 +163,9 @@
     min-width: 100vw;
     display: block;
 
-    color: white;
-    font-size: 18px;
-    font-weight: bold;
+    color: #BCE3C5;
+    font-size: 36px;
+    font-weight: 900;
     text-align: left;
     margin: 0px;
     padding: 10px 0px 15px 0px;
