css edits to orderCard, Home, and Search components.

--- a/client/src/components/Order/OrderCard.css
+++ b/client/src/components/Order/OrderCard.css
@@ -24,6 +24,10 @@
   height: 25%;
   padding: 25px;
   
+  background: white;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+
   color: #989898;
   letter-spacing: 4px;
   font-weight: 900;
@@ -44,7 +48,7 @@
   height: 55%;
   padding: 25px;
 
-  background: rgba(188,227,197,0.4);
+  background: rgba(188,227,197, 1);
   border-top: solid #BCE3C5 1px;
   border-bottom: solid #BCE3C5 1px;
 
