--- a/client/src/components/Search/Search.css
+++ b/client/src/components/Search/Search.css
@@ -7,7 +7,8 @@
   justify-content: space-between;
   align-items: center;
 
-  border: 1px solid #BCE3C5;
+  background-color: white;
+  border: 3px solid #BCE3C5;
   border-radius: 18px;
 }
 
