reverted some CSS edits with the OrderCard component and added the background property to the LoginContainer -- rather than the Body-Container within the Lahyout Component.

--- a/client/src/components/Layout/Layout.css
+++ b/client/src/components/Layout/Layout.css
@@ -24,11 +24,11 @@
     /* position: relative;
     top: 125px; */
 
-    background-image: linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)), url('https://img.freepik.com/premium-vector/simple-line-icons-seamless-pattern-with-simple-linear-icons-pharmacy-store-hospital-needs_348818-1274.jpg?w=2000');
+    /* background-image: linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)), url('https://img.freepik.com/premium-vector/simple-line-icons-seamless-pattern-with-simple-linear-icons-pharmacy-store-hospital-needs_348818-1274.jpg?w=2000');
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: fixed; */
     
 }
 
