--- a/client/src/screens/Home/Home.css
+++ b/client/src/screens/Home/Home.css
@@ -1,7 +1,7 @@
 .home-container {
 
   width: calc(100% - 225px);
-  min-height: 100vh;
+  /* min-height: 100vh; */
   height: 100%;
 
   display: flex;
