edits to OrderCard and Search components -- created a max-width when in desktop mode.

--- a/client/src/components/Order/OrderCard.css
+++ b/client/src/components/Order/OrderCard.css
@@ -121,3 +121,10 @@
   text-align: center;
   color: #989898;
 }
+
+@media only screen and (min-width: 1200px) { 
+  .order-card-container {
+    width: 80%;
+    max-width: 750px;
+  }
+}
