--- a/client/src/components/Order/Orders.css
+++ b/client/src/components/Order/Orders.css
@@ -15,10 +15,11 @@
   
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1024px) {
 
   .orders-container {
     width: 100%;
+    max-width: 550px;
   }
 
 }
